[tool.poetry]
name = "acsp-service"
version = "0.1.0"
description = ""
authors = ["Nathan Janke"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "acsp"},
    {include = "webapi"},
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
