[tool.poetry]
name = "acsp-service"
version = "0.1.0"
description = ""
authors = ["Nathan Janke"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "acsps"},
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "0.20.0"}
fastapi = "0.92.0"
pydantic = "1.10.5"
aiosqlite = "0.17.0"
databases = "0.7.0"
sqlalchemy = "1.4.46"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.1.3"
pytest-asyncio = "0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
